# smart-portfolio-core

./: LICENSE  README.md  main.py  main_oracle.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_modelos_py.html  z_145eef247bfb46b6_portafolio_py.html  z_145eef247bfb46b6_prueba_py.html  z_145eef247bfb46b6_reportes_py.html
src/: modelos.py  oracle_cli.py  portafolio.py  predictor.py  providers.py  prueba.py  reportes.py
tests/: conftest.py  test_models.py
